# pyrapidapi

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/pyrapidapi/: __init__.py  converter.py  manager.py
