[tool.poetry]
name = "pyrapidapi"
version = "0.1.0"
description = "Convenient decorators for RapidAPI"
authors = ["ckoshka"]

[tool.poetry.dependencies]
parse = "1.19.0"
python-dotenv = "0.19.2"
regex = "2022.1.18"
urllib3 = "1.26.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
