[metadata]
name = pyrapidapi
version = 0.0.2
author = ckoshka
description = Convenient decorators for RapidAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckoshka/pyrapidapi

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires=
    parse==1.19.0
    python-dotenv==0.19.2
    regex==2022.1.18
    urllib3==1.26.8

[options.packages.find]
where = src